--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
-<head>
-  <title>Doctor Who Quote Generator</title>
-  <link rel="stylesheet" href="styles.css"/>
-  <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-  <script src="javascript.js"></script>
+<html>
+  <head>
+    <title>Doctor Who Quote Generator</title>
+    <link rel="stylesheet" href="styles.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
 </head>
-               
+
 <body>
-  <div id="quote-generator">
+  <main id="quote-generator">
     <h1>Doctor Who Quote Generator</h1>
     <div id="quote-box">
       <div id="quote">
         <div id="text"></div>
         <div id="author"></div>
       </div>
-      <button id="new-quote" onclick="newQuote()">New Quote</button>
-      <a id="tweet-quote" target="_blank" href="twitter.com/intent/tweet">Tweet</a>
+      <div id="buttons">
+        <button id="new-quote" onclick="newQuote()">New Quote</button>
+        <a id="tweet-quote" target="_blank" href="twitter.com/intent/tweet">Tweet</a>
+      </div>
     </div>
-  </div>
+  </main>
+  <script src="javascript.js"></script>
 </body>
-  
+</html>
   
