--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <div id="author"></div>
       </div>
       <div id="buttons">
-        <button id="new-quote" onclick="newQuote()">New Quote</button>
-        <a id="tweet-quote" target="_blank" href="twitter.com/intent/tweet">Tweet</a>
+        <button id="new-quote" onclick="newQuote()">NEW QUOTE</button>
+        <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
       </div>
     </div>
   </main>
